<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/result"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/_1st_number"
        android:textSize="25sp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="180dp"/>

    <EditText
        android:id="@+id/second_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/_2nd_number"
        android:textSize="25sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="180dp"
        />

    <Button
        android:id="@+id/addition"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/color_button"
        android:text="@string/addition"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="74dp"
        android:background="@drawable/color_button"
        android:text="@string/multiply_x"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/subtraction"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/color_button"
        android:text="@string/subtraction"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/division"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="74dp"
        android:background="@drawable/color_button"
        android:text="@string/division"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>